crates/xabi/tests/ui/unsupported_shapes/data_nested_borrowed_field.rs
#[xabi::data]
pub struct BadData {
    pub value: Option<&'static str>,
}

fn main() {}
